# cpp-image-converter

./: .gitignore
ExtImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp  ppm_image.cpp
ImgConverter/: CMakeLists.txt  main.cpp
build_img_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
build_img_lib/ImgLibBuildDir/: Makefile  cmake_install.cmake
